# lazy-loading

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/lazy_loading/: __init__.py  lazy_module.py
