[project]
name = "lazy-loading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "yesseruser", email = "yesseruseryt@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
