[project]
name = "lazy-loading"
version = "0.2.0"
description = "A simple lazy module loader for python"
readme = "README.md"
authors = [
    { name = "yesseruser", email = "yesseruseryt@gmail.com" }
]
license = "LGPL-3.0-or-later"
license-files = ["LICEN[CS]E.*"]
keywords = ["lazy", "loading", "module"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/yesser-studios/lazy-loading"
Repository = "https://github.com/yesser-studios/lazy-loading.git"
Issues = "https://github.com/yesser-studios/lazy-loading/issues"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
